--- a/monshiners_alpha/src/styles/variables.scss
+++ b/monshiners_alpha/src/styles/variables.scss
@@ -1,8 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@400;500;600;700&display=swap');
 
 
-$my-font-family: 'Inconsolata', serif !important;
-$body-font-family: $my-font-family;
+
+
+//$my-font-family: 'Richey', serif !important;
+//$body-font-family: 'Richey', serif !important;
 $btn-text-transform: none;
 $card-elevation: 0;
 
